--- a/webside/index.html
+++ b/webside/index.html
@@ -57,6 +57,9 @@
               <a class="nav-link js-scroll-trigger" href="#Networks">Networks</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#Conclusion">Conclusion</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#searcher">Search engine</a>
             </li>
           </ul>
@@ -433,6 +436,24 @@ function carousel() {
 
     </section>
 
+
+ <section class="bg-dark text-white" id = "Conclusion">
+      <div class="container text-center">
+        <h2 class="mb-4">Conclusion</h2>
+        <hr class="my-4">
+        <p>We are all huge movie fans and therefore we had a lot of fun doing this project. We did a lot of analysis on the data set like you have probably noticed. We are quite happy about our findings and we are really proud of the final version of the recommendation engine. The recommendation engine is functioning quite well and we'll definitely be using it ourselves during the x-mas break when looking for movies to watch and we encourage you to try it out on the website.
+        <br>
+        <br>
+        Although it turned out great we tried quite a lot of different things before we were satisfied. For the network part we looked at three different networks. We created a network where movies were connected if they shared a certain percentage of their keywords. We did the same for genres as well as one network where nodes were cast members and nodes were linked if the cast members had starred together in a certain number of movies. After analyzing each of the networks we decided that none of them were good enough. This resulted in us creating a fourth network (can be seen above) which would combine the properties of the previous three. Movies were nodes and to create links to other movies we looked at multiple properties e.g. cast members, keywords, genres, directors and similarities in story line. After links have been created and we’re in the process of recommending we also look at IMDb ratings.
+        <br>
+        <br>
+        The text analysis itself went well but it ended up not being used in the recommendation engine except for the storylines of the movies. The reason for this was that the data we had for text analysis, ~14.000 reviews and ~1.000 movie scripts, only applied to a subset of our 4800 movies. We didn't want to make the number of movies that we could recommend less than it was at the beginning. We did a lot of text analysis and made a proof of concept that the data could’ve been used in the recommendation engine. This tells us that we could have further improved the engine by getting manuscripts and reviews for all our movies. If not the manuscripts then we could've perhaps gotten the subtitle texts for each movie and do the same analysis on those texts and used the information to further improve our engine.</p>
+
+
+
+
+      </div>
+    </section>
 
  <section id="searcher">
       <div class=" text-center">
