--- a/webside/index.html
+++ b/webside/index.html
@@ -325,13 +325,26 @@ function carousel() {
           </div>  
 
           <div class="col-lg-6">
-             <h4 class="mb-4">Information about the network</h4><p>We can see from the images below that this network looks good. The network has 4.794 nodes and 71.718 edges, the cluster coefficient is ~0.35 and modularity of our communities is ~0.59 which is quite high, especially considering there are only 9 communities. The degree distribution follows a power law. The minimum and maximum degree of the network is 0 and 394 respectively, the median degree is 13 and the mean degree is ~30. Deciding which properties and their weight to use took some time and was mostly fine-tuned through trial-and-error. Testing the recommendation engine proves that this works quite well and we're pleased with the results. We tested it on 'Iron Man 2' and the 5 most similar movies according to the network were: 'Iron Man', 'Iron Man 3', 'Captain America: Civil War', 'Zathura: A Space Adventure' and 'Avengers: Age Of Ultron'. Only movie that kinda stood out there in our eyes was 'Zathura' but it turns out that, among other things, it is directed by the same director as 'Iron Man 2'.</p>
-
-            <div class="col-lg-12 text-center">
-              <img class="img-fluid" src="img/main_network1.PNG" alt="">
-            </div>
+             <h4 class="mb-4">Information about the network</h4><p>We can see from the images below that this network looks good. We also see that the degree distribution follows a power law, which tells us that this is a scale-free network. Deciding which properties and their weight to us took some time and was mostly fine-tuned through trial-and-error. We tested it on 'Iron Man 2' and the 5 most similar movies according to the network were: 'Iron Man', 'Iron Man 3', 'Captain America: Civil War', 'Zathura: A Space Adventure' and 'Avengers: Age Of Ultron'. Only movie that kinda stood out there in our eyes was 'Zathura' but it turns out that, among other things, it is directed by the same director as 'Iron Man 2'.</p> 
+             <h4 class="mb-4">The network in numbers:</h4>
+             <ul class="list-group">
+                <li class="list-group-item">Size: 4.794 nodes and 71.718 edges</li>
+                <li class="list-group-item">The cluster coefficient is ~0.35</li>
+                <li class="list-group-item">The modularity of the 9 communities found by Python-Louvain is ~0.59</li>
+                <li class="list-group-item">The minimum and maximum degree of the network is 0 and 394 respectively</li>
+                <li class="list-group-item">The median and mean degree is 13 and ~30 respectively</li>
+              </ul>
           </div> 
 
+          <div class="col-lg-6 text-center">
+            <img class="img-fluid" src="img/main_network_communities_giant.PNG" alt="">
+          </div>
+
+          <div class="col-lg-6 text-center">
+            <img class="img-fluid" src="img/main_network1.PNG" alt="">
+          </div>
+
+          
           <div class="col-lg-6 text-center">
             <img class="img-fluid" src="img/degree_distribution1.PNG" alt="">
           </div>
@@ -340,9 +353,7 @@ function carousel() {
             <img class="img-fluid" src="img/degree_distribution2.PNG" alt="">
           </div>
 
-          <div class="col-lg-12 text-center">
-            <img class="img-fluid" src="img/main_network_communities_giant.PNG" alt="">
-          </div>
+
 
 
           <!-- now that we have used up all the 12 coloumbs in this row , lets go create a new "row class" , Alas in the same container -->
