--- a/webside/index.html
+++ b/webside/index.html
@@ -109,12 +109,12 @@
 <div class="row">
 
              <div title="View the explanier notebook" class="col-lg-6 col-sm-10 mx-auto text-center">
-               <a href="https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/explainer_notebook.ipynb">
+               <a class = "makeWhite" href="https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/explainer_notebook.ipynb">
                   <h3 class ="download">Notebook </h3>
                </a>
             </div>
           <div title="Download the Datasets" class="col-lg-6 col-sm-10 mx-auto text-center">
-            <a href="https://www.dropbox.com/sh/uw5uw9n6gtfpii0/AAB5UGCmpe6XqpOqPdVUxPLda?dl=0">
+            <a class = "makeWhite" href="https://www.dropbox.com/sh/uw5uw9n6gtfpii0/AAB5UGCmpe6XqpOqPdVUxPLda?dl=0">
               <h3 class ="download">Datasets</h3>
             </a>
           </div>      
