--- a/webside/index.html
+++ b/webside/index.html
@@ -110,15 +110,34 @@
               </p>    
           </div>
 
-        </div>
-
-          </div>
           
           <div class="col-lg-6">
              <h4 class="mb-4"> TMDb 5000 Movie dataset </h4>
                <p>
-                This was the central dataset in our analysis. This dataset fulfilled our requirements. It contain a vast amount of data and all of the information is gather From the site TMDb.com (The Movie Database). The dataset can be found and downloaded from this website.
+                This was the central dataset in our analysis. This dataset fulfilled our requirements. It contain a vast amount of data and all of the information is gather From the site TMDb.com (The Movie Database). The dataset can be found and downloaded from this <a class = "makeWhite" href="https://www.kaggle.com/tmdb/tmdb-movie-metadata"> 
+                                            <span class="download">here.</span> 
+                                        </a>
                </p> 
+
+            <h5 class="mb-4">Most important attributes</h5>
+              <p>  The dataset contains 22 attributes, they are not all equally important for our analysis and therefore we will only considert a subset of them here, more detailed information can be found in the explainer notebook </p>
+
+             <ul>
+                <li><strong> Title </strong> : the name of the movie </li>
+                <li><strong>Crew</strong> : info about the crew members of the movie</li>
+                <li><strong>Cast</strong> : info about the cast member of the movie</li>
+                <li><strong>Genres</strong> : there are 17 movie genres in this dataset</li>
+                <li><strong>Production companies</strong> : the company/companies that produced the movie</li>
+                <li><strong>Release date</strong>: the date when the movie was released</li>
+                <li><strong>Runtime</strong> : the total length of the movie</li>
+                <li><strong>Vote count</strong> : how many users rated the movie on the TMDb website</li>
+                <li><strong>Vote average</strong> : the average rating that the movie got on the TMDb website</li>
+                <li><strong>Revenue</strong> : The total earnings of the movie</li>
+                <li><strong>Budget</strong> : The amount spent on making the movie</li>
+                <li><strong>keywords</strong> : Set of words that is explanatory of the movie</li>
+              </ul>
+
+
              <h5 class="mb-4">statistics</h5>
              <ul>
                 <li>The dataset contains information about 4800 movies</li>
@@ -127,6 +146,39 @@
                 <li>The movies span years from 1916-2017</li>
               </ul>
           </div> 
+
+
+          <div class="col-lg-6">
+             <h4 class="mb-4"> Additional gathered datasets </h4>
+               <p>
+                This was the central dataset in our analysis. This dataset fulfilled our requirements. It contain a vast amount of data and all of the information is gather From the site TMDb.com (The Movie Database). The dataset can be found and downloaded from this <a class = "makeWhite" href="https://www.kaggle.com/tmdb/tmdb-movie-metadata"> 
+                                            <span class="download">here.</span> 
+                                        </a>
+               </p> 
+
+            <h5 class="mb-4">Most important attributes</h5>
+              <p>  The dataset contains 22 attributes, they are not all equally important for our analysis and therefore we will only considert a subset of them here, more detailed information can be found in the explainer notebook </p>
+
+             <ul>
+                <li><strong> Title </strong> : the name of the movie </li>
+                <li><strong>Crew</strong> : info about the crew members of the movie</li>
+                <li><strong>Cast</strong> : info about the cast member of the movie</li>
+                <li><strong>Genres</strong> : there are 17 movie genres in this dataset</li>
+                <li><strong>Production companies</strong> : the company/companies that produced the movie</li>
+                <li><strong>Release date</strong>: the date when the movie was released</li>
+                <li><strong>Runtime</strong> : the total length of the movie</li>
+                <li><strong>Vote count</strong> : how many users rated the movie on the TMDb website</li>
+                <li><strong>Vote average</strong> : the average rating that the movie got on the TMDb website</li>
+                <li><strong>Revenue</strong> : The total earnings of the movie</li>
+                <li><strong>Budget</strong> : The amount spent on making the movie</li>
+                <li><strong>keywords</strong> : Set of words that is explanatory of the movie</li>
+              </ul>
+          </div> 
+
+
+          </div>
+        </div>
+
         </div>   
       </div>
 
