info about each dataset added to the website

--- a/webside/index.html
+++ b/webside/index.html
@@ -111,11 +111,11 @@
           </div>
 
           
-          <div class="col-lg-6">
+          <div class="col-lg-6 addMargin">
              <h4 class="mb-4"> TMDb 5000 Movie dataset </h4>
                <p>
                 This was the central dataset in our analysis. This dataset fulfilled our requirements. It contain a vast amount of data and all of the information is gather From the site TMDb.com (The Movie Database). The dataset can be found and downloaded from this <a class = "makeWhite" href="https://www.kaggle.com/tmdb/tmdb-movie-metadata"> 
-                                            <span class="download">here.</span> 
+                                            <span class="download">website.</span> 
                                         </a>
                </p> 
 
@@ -148,15 +148,24 @@
           </div> 
 
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 addMargin">
              <h4 class="mb-4"> Additional gathered datasets </h4>
 
             <h5 class="mb-4"> User rating and storylines from IMDb </h5>
               <p>   The Kaggle database contains ratings and storylines (called overview in the TMDb dataset) from TMDb but we also wanted to look at user ratings and the storylines from IMDb (Internet Movie Database) as the ratings have much more votes and thus are more realistic.  By scraping the IMDb website we manage to gather information for all movies in our Kaggle database except five</p>
 
              <ul>
-                <li><strong> imdb-score.json </strong> : This file contains the IMDb rating of the movies in our Kaggle dataset. The size of the file is 85 KB </li>
-                <li><strong>imdb-storyline.json</strong> : This file contains the IMDb storyline of the movies in our Kaggle dataset. The size of the file is 2.8 MB</li>
+                  <li> 
+                    <a class = "makeWhite" href="https://www.dropbox.com/sh/uw5uw9n6gtfpii0/AAB5UGCmpe6XqpOqPdVUxPLda?dl=0"> 
+                      <span class="download"><strong>imdb-score.json </strong> </span> 
+                    </a>
+                    : This file contains the IMDb rating of the movies in our Kaggle dataset. The size of the file is 85 KB </li>
+
+                  <li>
+                    <a class = "makeWhite" href="https://www.dropbox.com/sh/uw5uw9n6gtfpii0/AAB5UGCmpe6XqpOqPdVUxPLda?dl=0"> 
+                      <span class="download"><strong>imdb-storyline.json</strong>  </span> 
+                    </a>
+                    : This file contains the IMDb storyline of the movies in our Kaggle dataset. The size of the file is 2.8 MB</li>
             </ul>
 
             <h5 class="mb-4"> Manuscripts </h5>
@@ -169,24 +178,35 @@
               had the most comprehensive database of manuscripts that we could find. Unfortunately they are not offering the possibility of downloading the scripts, however we manage to download the manuscripts by scraping the IMSDb website </p>
 
             <ul>
-                <li><strong> scripts </strong> : This folder contains 1116 manuscripts and the intersection with our Kaggle dataset is 715 manuscripts. Therefore we only managed to find manuscripts for 715 movies out of the 4800 movies that we have in our dataset. The size of the dataset is 232,6 MB
+                  <li>
+                    <a class = "makeWhite" href="https://www.dropbox.com/sh/uw5uw9n6gtfpii0/AAB5UGCmpe6XqpOqPdVUxPLda?dl=0"> 
+                      <span class="download"><strong> /scripts </strong> </span> 
+                    </a>
+
+                    : This folder contains 1116 manuscripts and the intersection with our Kaggle dataset is 715 manuscripts. Therefore we only managed to find manuscripts for 715 movies out of the 4800 movies that we have in our dataset. The size of the dataset is 232,6 MB
                </li>
             </ul>
 
 
-
-
             <h5 class="mb-4"> User reviews </h5>
-              <p>   </p>
+              <p>   We found a data set that contained a 100.000 user reviews from IMDb on some 14.000 movies. The dataset is available on the 
+              <a class = "makeWhite" href="http://ai.stanford.edu/"> 
+                              <span class="download"> Stanford Artificial Intelligence Laboratory </span> 
+              </a>
+              website and can be downloaded by clicking here
+                    <a class = "makeWhite" href="http://ai.stanford.edu/~amaas/data/sentiment/"> 
+                                                  <span class="download">here</span> 
+                    </a>
+              </p>
 
              <ul>
-                <li><strong> imdb-score.json </strong> : This file contains the IMDb rating of the movies in our Kaggle dataset. The size of the file is 85 KB </li>
-                <li><strong>imdb-storyline.json</strong> : This file contains the IMDb storyline of the movies in our Kaggle dataset. The size of the file is 2.8 MB</li>
+                <li>
+                    <a class = "makeWhite" href="https://www.dropbox.com/sh/uw5uw9n6gtfpii0/AAB5UGCmpe6XqpOqPdVUxPLda?dl=0"> 
+                      <span class="download"><strong> aclImdb_v1.tar.gz </strong> </span> 
+                    </a>
+                  
+                    : This zip file contains all of the 100.000 movie reviews. The total size unzipped is 220 MB</li>
               </ul>
-
-
-
-
 
           </div> 
 
