--- a/webside/index.html
+++ b/webside/index.html
@@ -380,6 +380,30 @@ function carousel() {
         
         <p>The initial idea was to find manuscripts for all of the 5000 movies from the Kaggle dataset. Then analyze these manuscripts and calculate both similarities between movies and sentiment score for each movie. This information could then be fed to the recommendation engine as two variables. This would help the engine distinguish between happy and sad movies. Furthermore, the similarity measure could help the recommendation engine to find movies with similar languages. </p>
 
+        
+            <div class="col-lg-6 text-center">
+            <img class="img-fluid" src="img/sentiment_mean.PNG" alt="">
+          </div>
+
+          <div class="col-lg-6 text-center">
+           <p> We start this section of by looking at the <span class = "addGreenUnderscore">10 happiest movies</span> and the <span class = "addRedUnderscore">10 most unhappy movies</span>. Looking at the figures donw bellow we cant say that the results are suprising. The movies with the <span class = "addGreenUnderscore">highest</span> average sentiment score are all so called "feel good movies", which any sane perason would expect before hand to have quite happy vocabulary. When taking a look at the movies with the <span class = "addRedUnderscore"> lowest</span> sentiment score, we are not suprised. These are all movies that are eather action or horror movies, where the movie envolves around death or war.</p>
+           </div>
+           <div class="col-lg-6 text-center" style ="margin: 10px"></div>
+
+           <div class="col-lg-6 text-center">
+            <img class="img-fluid" src="img/sentiment_var.PNG" alt="">
+          </div>
+              <div class="col-lg-6 text-center">
+           <p> Next we take a look at the variance. If a movie has a large variance in the sentiment values of its manuscript then the vocabulary used in the manuscript must be quite diversed, meaning that that the movie  must contain a lot of <span class = "addGreenUnderscore">happy</span> and <span class = "addRedUnderscore">unhappy</span> words. The 10 movies with most variance are movies that are considered as a Thriller/Action/Crime/Horror and a Comedy/Romance. Like for example the movie Deadpool; it is a dark comedy which is also consider to be a action or a adventure movie. Deadpool is a comedy that contains a lot of violence and so it is understandable that the happiness rank of the words used in the manuscript vary alot.
+
+
+            The bottom 10 list are all movies that is either about something <span class = "addGreenUnderscore">happy</span>, like comedies or romance movies or they are on the darker side of spectrum meaning that the storyline is about something which can be considered <span class = "addRedUnderscore">unhappy</span>, like Horror movies, dark Drama movies or dark Action/Thriller movies. Therefore the sentimental value of the words used in the manuscript do not vary as much.
+
+           </p>
+           </div>
+
+
+
 
            <div class="col-lg-6 text-center">
             <img class="img-fluid" src="img/manuscriptBox.PNG" alt="">
