--- a/webside/index.html
+++ b/webside/index.html
@@ -109,7 +109,8 @@
                 this notebook contains all the code used in the analysis as well as more detailed explanations and conclusions of each part. We will only show subset of the analysis in this website and therefore we encourage you to take a look at the explainer notebook.
               </p>    
           </div>
-
+        
+        <div class="col-lg-6 text-center" style ="margin: 15px"></div>
           
           <div class="col-lg-6 addMargin">
              <h4 class="mb-4"> TMDb 5000 Movie dataset </h4>
