--- a/webside/index.html
+++ b/webside/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>The  Searcher, search the world!</title>
+    <title>Movie Recommendation Engine</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -546,7 +546,7 @@ The genres with the highest average variance within the vocabulary of the manusc
  <section id="searcher">
       <div class=" text-center">
         
-            <h2 class="section-heading">The Searcher</h2>
+            <h2 class="section-heading">The Recommendation engine</h2>
             <hr class="my-4">
               <div class="search">
               
